--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
 		<meta content="width=device-width, user-scalable=no" name="viewport" />
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<!-- css app-dep -->
 		<link type="text/css" rel="stylesheet" href="web-files/css/app-dependencies.min.css">
 		<!-- css app -->
