--- a/source/index.html
+++ b/source/index.html
@@ -16,9 +16,14 @@
 
 		<nav class="navbar fixed-top navbar-light bg-white border-bottom">
 
-			<a class="navbar-brand" href="#">
-				<i class="fa fa-lg fa-picture-o" aria-hidden="true"></i>
-			</a> <!-- .navbar-brand -->
+			<div class="container">
+
+				<a class="navbar-brand" href="#">
+					<i class="fa fa-lg fa-picture-o" aria-hidden="true"></i>
+				</a> <!-- .navbar-brand -->
+
+				<user-search-component only-search="true"></user-search-component>
+			</div> <!--  .container -->
 
 		</nav> <!-- navbar navbar-light bg-light -->
 
