Add new Features

--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
 			<div class="container">
 
 				<a class="navbar-brand" href="#">
-					<i class="fa fa-lg fa-picture-o" aria-hidden="true"></i>
+					<img class="navbar-brand-image" src="app/assets/logo/duck2.svg"/>
 				</a> <!-- .navbar-brand -->
 
 				<user-search-component only-search="true"></user-search-component>
@@ -28,6 +28,8 @@
 		</nav> <!-- navbar navbar-light bg-light -->
 
 		<ui-view></ui-view><!--  ui-view -->
+
+		<alert-component></alert-component> <!-- alert-component -->
 
 		<!-- js app-dep -->
 		<script src="web-files/js/app-dependencies.min.js"></script>
