--- a/source/app/shared/modules/fields/input-upload/input-upload.html
+++ b/source/app/shared/modules/fields/input-upload/input-upload.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group c-input-upload">
 	
     <label>{{$ctrl.label}}</label>
 
@@ -14,7 +14,7 @@
             ng-model="$ctrl.value" 
             ng-change="$ctrl.onChange()"
             type="file">
-        <label class="custom-file-label" for="customFile">Enviar Imagem</label>
+        <label class="custom-file-label" for="customFile"></label>
     </div> <!-- .custom-file -->
 
     <div class="progress mt-3" ng-show="$ctrl.progress != 0">
